--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,21 +13,25 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout source code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
+          distribution: "temurin"
+          java-version: "8"
 
       - name: Sync latest Unblocked Music source code
-        run:
-          git clone --depth=1 https://github.com/luoxingran/server.git && cd server && zip -r ../UnblockNeteaseMusic.zip . && cd .. && rm ./app/src/main/assets/UnblockNeteaseMusic.zip && rm -rf server && mv ./UnblockNeteaseMusic.zip ./app/src/main/assets/UnblockNeteaseMusic.zip
+        run: |
+          git clone --depth=1 https://github.com/luoxingran/server.git
+          cd server && zip -r ../UnblockNeteaseMusic.zip . && cd ..
+          rm ./app/src/main/assets/UnblockNeteaseMusic.zip
+          rm -rf server
+          mv ./UnblockNeteaseMusic.zip ./app/src/main/assets/UnblockNeteaseMusic.zip
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -36,9 +40,9 @@ jobs:
         run: ./gradlew app:assembleRelease
 
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: ${{github.workspace}}/app/build/outputs/apk/release/*.apk
+          path: ${{ github.workspace }}/app/build/outputs/apk/release/*.apk
           if-no-files-found: warn
           retention-days: 30
